add swagger file
